# tweakngeek_firmware

./: BUILD.md  CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  build_arm.bat  build_arm.sh
.kiro/specs/tweakngeek-firmware/: design.md  requirements.md  tasks.md
cmake/: arm-none-eabi-gcc.cmake  windows-msvc.cmake
include/: README.md  hal.h  hal_display.h  hal_gpio.h  hal_radio.h  tweakngeek_config.h
linker/: STM32WB55RG_FLASH.ld
scripts/: README.md  build.bat  build.sh  verify_setup.bat  verify_setup.sh
src/: main.c
src/applications/: CMakeLists.txt  README.md  applications_stub.c
src/hal/: CMakeLists.txt  README.md  hal_base.c  hal_display.c  hal_gpio.c  hal_internal.h  hal_radio.c  hal_stub.c  hal_utils.c
src/kernel/: CMakeLists.txt  README.md  boot.c  boot.h  interrupt.c  interrupt.h  interrupt_handlers.c  kernel.h  kernel_core.c  memory.c  memory.h  scheduler.c  scheduler.h  startup_stm32wb55.s  syscalls.c
src/runtime/: CMakeLists.txt  README.md  runtime_stub.c
src/services/: CMakeLists.txt  README.md  services_stub.c
